[package]
name = "crypto-art"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#web-sys = "0.3.56"
wasm-bindgen = "0.2.79"
getrandom = { version = "0.2.5", features = ["js"] }
rand_core = "0.6.3"
subtle = "2.4.1"
elliptic-curve = "0.11.12"
k256 = { version = "0.10.2", features = ["ecdh"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[lib]
crate-type = ["cdylib", "rlib"]